# SharAI

./: LICENSE  README.md  dataset.ipynb  pyproject.toml
backend/: pyproject.toml
sharai/: package-lock.json  package.json  theme.json
sharai/app/: globals.css  page.tsx
sharai/app/admin/: page.tsx
sharai/components/: AdminDashboard.tsx  AdminLogin.tsx  AnswerDisplay.tsx  ApiKeysTab.tsx  DocumentsTab.tsx  FeedbackTab.tsx  Footer.tsx  Header.tsx  QuestionForm.tsx  RecentQuestions.tsx  StatsTab.tsx
sharai/components/ui/: AnimatedResponse.tsx  Logo.tsx  pattern-background.tsx  stats-card.tsx  theme-toggle.tsx
sharai/context/: AdminContext.tsx  ThemeContext.tsx
sharai/lib/: languageDetection.ts  openai.ts  vectorDb.ts
sharai/shared/: schema.ts  types.ts
